<resources>
    <string name="app_name">MyPlanner</string>
    <string name="task_manager_String">Task Manager</string>
    <string name="create_task_String">Create Task</string>
    <string name="cr_task_String">Create Task</string>
    <string name="cr_name_String">Name</string>
    <string name="cr_description_String">Description</string>
    <string name="cr_date_String">Date</string>
    <string name="create">Create</string>
</resources>
